# SystemMointor-v2

./: .gitignore  README.md
SystemMonitorAgent/: CMakeLists.txt
SystemMonitorAgent/include/config/: SystemLimits.hpp
SystemMonitorAgent/include/enums/: EnumsProvider.hpp  ErrorTypes.h
SystemMonitorAgent/include/interfaces/: ICapacityProvider.h  IComponentMetadateProvider.h  IErrorProvider.h  ISchedulingProvider.h
SystemMonitorAgent/include/interfaces/global/: IDescriptionProvider.h
SystemMonitorAgent/include/interfaces/processors/: IAnalytics.hpp  IStaticInfo.hpp  IUsage.hpp
SystemMonitorAgent/include/models/bl/hardwares/: CPUDTO.hpp
SystemMonitorAgent/include/models/dal/: RawCommon.hpp
SystemMonitorAgent/include/models/dal/hardware/: CPURawModel.hpp
SystemMonitorAgent/include/models/dal/hardwares/: BatteryDTO.hpp  CPURawModel.hpp  GPUDTO.hpp  StorageDTO.hpp
SystemMonitorAgent/include/models/dto/hardware/: CPUDTO.hpp  RAMDTO.hpp
SystemMonitorAgent/include/models/dto/network/: NetworkDTO.hpp
SystemMonitorAgent/include/models/hardwares/: CPUDTO.hpp
SystemMonitorAgent/include/models/raw/: RawCommon.hpp
SystemMonitorAgent/include/models/raw/hardware/: CPURawModel.hpp
SystemMonitorAgent/include/readers/hardware/: CPUReader.hpp
SystemMonitorAgent/include/readers/hardwares/: CPUReader.hpp
SystemMonitorAgent/src/: main.cpp
SystemMonitorAgent/src/data_access/windows/: CPUReader.cpp
SystemMonitorAgent/src/readers/windows/: CPUReader.cpp
SystemMonitorAgent/src/readers/windows/utils/: WinTimeUtils.hpp
